# muruchat

./: .gitignore  Cargo.toml  README.md  Trunk.toml  wrangler.toml
.cargo/: config.toml
.devcontainer/: Dockerfile  devcontainer.json
lib/: Cargo.toml
lib/src/: handshake.rs  lib.rs  message.rs  pki.rs
src/: lib.rs
web/: Cargo.toml  Trunk.toml  index.html  tailwind.config.js
web/css/: tailwind_compiled.css
web/src/: lib.rs  main.rs  pki.rs
web/src/components/: container.rs  icons.rs
web/src/pages/: add_contact.rs  chat.rs  home.rs
web/src/state/: address_book.rs  chats.rs  user.rs
worker/: Cargo.toml
worker/src/: lib.rs
