[package]
name = "muruchat"
version = "0.1.0"
edition = "2021"

[dependencies]
ecies = { version = "0.2.2", default-features = false, features = ["pure"] }
getrandom = { version = "0.2.7", features = ["js"] }
hex = "0.4.3"
k256 = { version = "0.11.3", features = ["ecdsa"] }
rand = "0.8.5"
serde = { version= "1.0", features = ["derive"] }

[dev-dependencies]
wasm-bindgen-test = "0.3.30"
serde_json = { version= "1.0" }
