[package]
name = "web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
muruchat = { path = "../lib" }

dioxus = { version = "0.2.3", features = ["fermi", "web"] }
dioxus-router = "0.2.2"
getrandom = { version = "0.2.6", features = ["js"] }
hex = "0.4.3"
k256 = { version = "0.10.4" }
rand = "0.8.5"
serde = { version= "1.0", features = ["derive"] }
serde_json = { version= "1.0" }
web-sys = { version = "0.3.57", features = ["Clipboard", "console", "Navigator", "Storage", "Window"] }

[dev-dependencies]
wasm-bindgen = "0.2.80"
wasm-bindgen-test = "0.3.30"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
