[package]
name = "web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
muruchat = { path = "../lib" }

dioxus = { version = "0.2.4", features = ["fermi", "web"] }
dioxus-router = "0.2.3"
hex = "0.4.3"
js-sys = "0.3"
serde = { version= "1.0", features = ["derive"] }
serde_json = { version= "1.0" }
wasm-bindgen = "0.2.81"
web-sys = { version = "0.3.58", features = ["Clipboard", "console", "Navigator", "Storage", "Window", "Blob", "ProgressEvent", "MessageEvent", "WebSocket", "BinaryType", "FileReader", "ErrorEvent"] }

[dev-dependencies]
wasm-bindgen-test = "0.3.31"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
