[package]
name = "worker"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
muruchat = { path = "../lib" }

cfg-if = "0.1.2"
getrandom = { version = "0.2", features = ["js"] }
futures-util = "0.3.21"
hex = "0.3.1"
rsa = "0.6.1"
serde_json = "1.0.67"
worker = "0.0.9"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.1", optional = true }

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
